image files to jpg

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="pics\DSC02304.JPG" class="img-fluid" alt="">
+              <img src="pics\DSC02304.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="pics\DSC02304.JPG" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="pics\DSC02304.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -161,9 +161,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="pics\DSC02394.JPG" class="img-fluid" alt="">
+              <img src="pics\DSC02394.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="pics\DSC02394.JPG" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="pics\DSC02394.jpg" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -177,17 +177,17 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="pics\DSC02086.JPG" class="img-fluid" alt="">
+              <img src="pics\DSC02086.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="pics\DSC02086.JPG" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="pics\DSC02086.jpg" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="pics\DSC02069.JPG" class="img-fluid" alt="">
+              <img src="pics\DSC02069.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="pics\DSC02069.JPG" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="pics\DSC02069.jpg" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -209,9 +209,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="pics\DSC02260.JPG" style="height: 30rem; width: 100%;" class="img-fluid" alt="">
+              <img src="pics\DSC02260.jpg" style="height: 30rem; width: 100%;" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="pics\DSC02260.JPG" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="pics\DSC02260.jpg" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
